@@ -1,5 +1,17 @@
 <?php
 $language = array (
+  'group_tools:joinrequest:already' => 'Lidmaatschap verzoek intrekken',
+  'group_tools:joinrequest:already:tooltip' => 'Je hebt reeds verzocht lid te worden van deze groep, klik hier om dit verzoek in te trekken',
+  'group_tools:menu:invitations' => 'Beheer uitnodigingen',
+  'group_tools:settings:admin_create' => 'Alleen Site beheerders mogen groepen aanmaken',
+  'group_tools:settings:admin_create:description' => 'Als deze instelling op \'Ja\' wordt gezet kunnen gewone gebruikers geen groepen meer aanmaken',
+  'group_tools:admin_transfer:title' => 'Draag het beheer van deze groep over',
+  'group_tools:auto_join:title' => 'Automatisch lid worden opties',
+  'group_tools:groups:invite:title' => 'Nodig gebruikers uit voor deze groep',
+  'group_tools:action:invite:error:invite' => 'Er zijn geen gebruikers uitgenodigd (%s waren al uitgenodigd, %s waren al lid)',
+  'group_tools:action:invite:error:add' => 'Er zijn geen gebruikers uitgenodigd (%s waren al uitgenodigd, %s waren al lid)',
+  'group_tools:action:invite:success:invite' => 'Er zijn %s gebruikers uitgenodigd (%s waren al uitgenodigd, %s waren al lid)',
+  'group_tools:action:invite:success:add' => 'Er zijn %s gebruikers toegevoegd (%s waren al uitgenodigd, %s waren al lid)',
   'group_tools:profile_widgets:title' => 'Toon groep widgets aan niet leden',
   'group_tools:profile_widgets:description' => 'Dit is een besloten groep. Standaard worden er geen widgets getoond aan niet leden. Hier kan kan je deze instelling aanpassen',
   'group_tools:profile_widgets:option' => 'Mogen niet leden de widgets zien op de groep profiel pagina:',
@@ -51,7 +63,6 @@ Om de groep te bezoeken klik op onderstaande link:
   'group_tools:add_users' => 'Gebruikers toevoegen',
   'group_tools:in' => 'in',
   'group_tools:menu:mail' => 'E-mail leden',
-  'group_tools:menu:membership' => 'Lidmaatschap goedkeuring',
   'group_tools:settings:admin_transfer' => 'Sta groep eigenaar overdracht toe',
   'group_tools:settings:admin_transfer:admin' => 'Alleen site beheerders',
   'group_tools:settings:admin_transfer:owner' => 'Groep eigenaren en site beheerder',
@@ -101,7 +112,6 @@ Je kunt ook gaan naar Alle groepen -> Groep uitnodigingen en daar de volgende co
   'group_tools:multiple_admin:profile_actions:remove' => 'Verwijder groep beheerder',
   'group_tools:multiple_admin:profile_actions:add' => 'Maak groep beheerder',
   'group_tools:multiple_admin:group_tool_option' => 'Mogen groep beheerders andere groep beheerder aanmaken',
-  'group_tools:group_kick:profile_actions:kick' => 'Verwijder uit de groep',
   'group_tools:mail:message:from' => 'Van groep',
   'group_tools:mail:title' => 'Stuur een e-mail naar de groepsleden',
   'group_tools:mail:form:title' => 'Onderwerp',
@@ -139,23 +149,10 @@ Het formaat moet zijn: weergave naam;e-mail adres. Er mag geen kopregel zijn.',
   'group_tools:action:toggle_admin:error:add' => 'Er is een onbekende fout opgetreden tijdens het toevoegen van de gebruiker als groep beheerder',
   'group_tools:action:toggle_admin:success:remove' => 'De gebruiker is succesvol verwijderd als groep beheerder',
   'group_tools:action:toggle_admin:success:add' => 'De gebruiker is succesvol toegevoegd als groep beheerder',
-  'group_tools:action:kick:error' => 'Er is een onbekende fout opgetreden tijdens het verwijderen van de gebruiker uit de groep',
-  'group_tools:action:kick:success' => 'De gebruiker is succesvol verwijderd uit de groep',
   'group_tools:action:mail:success' => 'Bericht succesvol verzonden',
-  'group_tools:action:group:invite:success' => 'Succesvol %s gebruikers uitgenodigd via CSV om lid te worden van de groep',
-  'group_tools:action:group:invite:success:other' => 'Succesvol %s gebruikers uitgenodigd via CSV om lid te worden van de groep (%s waren al lid, %s waren al uitgenodigd)',
-  'group_tools:action:group:invite:error:no_invites' => 'Geen uitnodigingen verzonden (%s waren al lid, %s waren al uitgenodigd)',
-  'group_tools:action:groups:invite:add:success' => 'Succesvol %s gebruikers toegevoegd',
-  'group_tools:action:groups:invite:add:success:other' => 'Succesvol %s gebruikers toegevoegd (%s waren al lid)',
-  'group_tools:action:groups:invite:add:error:no_add' => 'Geen gebruikers toegevoegd (%s waren al lid)',
-  'group_tools:action:group:invite:email:success' => 'Succesvol %s gebruikers via email uitgenodigd om lid te worden van deze group',
-  'group_tools:action:group:invite:email:success:other' => 'Succesvol %s gebruikers via email uitgenodigd om lid te worden van deze group (%s waren al uitgenodigd',
-  'group_tools:action:group:invite:email:error:no_invites' => 'Geen e-mail uitnodigingen verzonden (%s waren al uitgenodigd)',
-  'group_tools:action:group:invite:csv:error:no_invites' => 'Geen uitnodigingen verzonden via CSV (%s waren al lid, %s waren al uitgenodigd)',
   'group_tools:action:groups:email_invitation:error:input' => 'Geef een uitnodigingscode op',
   'group_tools:action:groups:email_invitation:error:code' => 'De opgegeven uitnodiginscode in niet meer geldig',
   'group_tools:action:groups:email_invitation:error:join' => 'Er is een onbekende fout opgetreden tijdens het lid worden van de groep %s, misschien ben je al lid',
   'group_tools:action:groups:email_invitation:success' => 'Je bent lid geworden van de groep',
 );
 add_translation("nl", $language);
-?>
